--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,15 @@ services:
       - PYTHONUNBUFFERED=1
 
   frontend:
-    build:
-      context: ./frontend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules # evita conflitos com node_modules local
-    ports:
-      - "5173:5173"
-    stdin_open: true
-    tty: true
+      build:
+        context: ./frontend
+      volumes:
+        - ./frontend:/app
+        - /app/node_modules
+      ports:
+        - "5173:5173"
+      stdin_open: true
+      tty: true
+      environment:
+        - CHOKIDAR_USEPOLLING=true
+        - WATCHPACK_POLLING=true
