--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,4 +16,4 @@ COPY . .
 EXPOSE 8000
 
 # força o autoreload via watchdog
-CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000 --reload"]
+CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
